// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Testing snapshot for Posthog's event destination action: all fields 1`] = `
{
  "api_key": ")z(DntC*1pA^Oh]x",
  "batch": [
    {
      "event": "$screen",
      "properties": {
        "$ip": "178.245.88.241",
        "$process_person_profile": false,
        "$screen_name": ")z(DntC*1pA^Oh]x",
        "distinct_id": ")z(DntC*1pA^Oh]x",
        "testType": ")z(DntC*1pA^Oh]x",
      },
      "timestamp": "2021-02-01T00:00:00.000Z",
    },
  ],
  "historical_migration": false,
}
`;

exports[`Testing snapshot for Posthog's event destination action: required fields 1`] = `
{
  "api_key": ")z(DntC*1pA^Oh]x",
  "batch": [
    {
      "event": "$screen",
      "properties": {
        "$process_person_profile": false,
        "$screen_name": ")z(DntC*1pA^Oh]x",
        "distinct_id": ")z(DntC*1pA^Oh]x",
      },
    },
  ],
  "historical_migration": false,
}
`;
